--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,13 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blogs post</h1>
-        <p>Y este es el parrafo del inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este el titulo actractivo e intersante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas interesantes que hagamos con las ramas</p>
+
+            </div>
+
+        </div>
     </body>
 </html>
