--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">Cabecera</div>
             <div id="post">
                 <h1>Este el titulo actractivo e intersante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas interesantes que hagamos con las ramas</p>
