--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
             <div id="post">
                 <h1>Este el titulo actractivo e intersante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas interesantes que hagamos con las ramas</p>
-                <p>Los blog son la mejor forma de trasmitir y compartir informacion mucho mejor que ir a conferencias </p>
+                <p>Los blogs son la mejor forma de trasmitir y compartir informacion mucho mejor que ir a conferencias </p>
 
             </div>
 
