--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Este el titulo actractivo e intersante del post</h1>
