cambio en la cabecera y color de texto ademas se agrego contenodo al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,12 +6,13 @@
     <body>
         <div id="container">
             <div id="cabecera">Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Este el titulo actractivo e intersante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas interesantes que hagamos con las ramas</p>
-                <p>Los blogs son la mejor forma de trasmitir y compartir informacion mucho mejor que ir a conferencias </p>
+                <p>Los blogs son la mejor forma de trasmitir y compartir informacion mucho mejor que ir a conferencias</p>
+                <p>Suscribete y dale like.</p>
 
             </div>
 
