--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,9 @@
     </head>
     <body>
         <div id="container">
-            <div id="cabecera">Hyperblog
+            <div id="cabecera">
+                <img id ="logo" src="imagenes/dragon.png" alt="">
+                Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
