--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,10 @@
 
             </div>
 
+            <div id="footer">
+                Hecho con amor en Platzi****
+            </div>
+
         </div>
     </body>
 </html>
