Arregle el error en numero de version y puse tile a parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido al Hyperblog 20.0</title>
+        <title>Bienvenido al Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -12,7 +12,7 @@
             </div>
             <div id="post">
                 <h1>Este el titulo actractivo e intersante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas interesantes que hagamos con las ramas</p>
+                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas interesantes que hagamos con las ramas</p>
                 <p>Los blogs son la mejor forma de trasmitir y compartir informacion mucho mejor que ir a conferencias</p>
                 <p>Suscribete y dale like.</p>
 
