--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
             <div id="post">
                 <h1>Este el titulo actractivo e intersante del post</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar las cosas interesantes que hagamos con las ramas</p>
+                <p><img src="/imagenes/argentina.jpg" width="100%" alt=""></p>
                 <p>Los blogs son la mejor forma de trasmitir y compartir informacion mucho mejor que ir a conferencias</p>
                 <p>Suscribete y dale like.</p>
 
