--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img id ="logo" src="imagenes/dragon.png" alt="">
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Este el titulo actractivo e intersante del post</h1>
